<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.login.presentation.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">


        <!-- Tiêu đề -->
        <TextView
            android:id="@+id/labelHeader1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/baloo_bhai"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="#535EA6"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/signuplabel"
            android:textColor="#535EA6"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelHeader1" />

        <!-- Phần nhập thông tin -->
        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toBottomOf="@id/label1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/style_edit_text"
            android:text="@={viewModel.name}"
            android:hint="@string/fullName"
            android:padding="12dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/style_edit_text"
            android:text="@={viewModel.username}"
            android:hint="@string/username"
            android:padding="12dp" />

        <EditText
            android:id="@+id/numberphone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_edit_text"
            android:hint="@string/numberPhone"
            android:padding="12dp"
            android:text="@={viewModel.phoneNumber}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/numberphone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/style_edit_text"
            android:text="@={viewModel.password}"
            android:hint="@string/passWord"
            android:inputType="textPassword"
            android:padding="12dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/policy_setting"
            android:textColorLink="#928F8F"
            android:checked="@={viewModel.isAgree}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <Button
            android:id="@+id/signUp_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="#535EA6"
            android:padding="12dp"
            android:text="@string/signup"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBox"
            android:onClick="@{() -> viewModel.onRegisterClicked()}"/>

        <TextView
            android:id="@+id/goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signUp_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/signed"
            android:textColor="#25262A"
            android:onClick="@{() -> viewModel.navigateToLogin()}"
            android:textSize="13sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>